--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,5 @@ h1,h2,h3,h4,h5 {
 @import './treeZ.scss';
 @import './monthZ.scss';
 @import './markdownTable.scss';
+@import './fullScreen.scss';
+@import './zButton.scss';
