--- a/src/styles/zButton.css
+++ b/src/styles/zButton.css
@@ -1,206 +1,3 @@
-* {
-  margin: 0;
-}
-
-h1, h2, h3, h4, h5 {
-  line-height: 76px;
-}
-
-.showMainBody p {
-  margin: 10px 0;
-}
-
-.showMainBody li {
-  margin: 10px 0;
-}
-
-.el-scrollbar__wrap {
-  overflow-x: hidden;
-}
-
-.header-anchor {
-  display: none;
-}
-
-hr {
-  border: 1px solid #eaecef;
-}
-
-.z-tree .z-tree-itemBox-list {
-  padding-left: 20px;
-  overflow: hidden;
-  display: block;
-}
-
-.z-tree .slide-fade-enter-active {
-  transition: all .3s ease;
-}
-
-.z-tree .slide-fade-leave-active {
-  transition: all 0.8s cubic-bezier(1, 0.5, 0.8, 1);
-}
-
-.z-tree .slide-fade-enter, .z-tree .slide-fade-leave-to {
-  transform: translateX(10px);
-  opacity: 0;
-}
-
-.z-tree img {
-  width: 14px;
-  height: 14px;
-  display: inline-block;
-}
-
-.z-tree p {
-  margin: 0;
-  cursor: pointer;
-}
-
-.monthsBox {
-  width: 600px;
-  margin-top: 20px;
-  height: 600px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.calendar-monthBox {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  background-color: #e8f3ed;
-  border: 1px black solid;
-}
-
-.calendar-monthBox .calendar-weekBox {
-  height: 10%;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  border-bottom: 1px #c8cacc solid;
-}
-
-.calendar-monthBox .calendar-weekBox .calendar-week {
-  width: calc(100% / 7);
-  display: block;
-  text-align: center;
-  font-size: 14px;
-  color: #9ea7b4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  background-color: white;
-}
-
-.calendar-monthBox .calendar-dateBox {
-  height: 90%;
-  width: 100%;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  border-bottom: 1px #eeeff0 solid;
-  margin: 0;
-  line-height: unset;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date {
-  width: calc(100% / 7);
-  height: 100%;
-  display: block;
-  text-align: center;
-  font-size: 14px;
-  color: #5f6471;
-  align-items: center;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  background-color: white;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date p {
-  width: 100%;
-  margin: 0;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date p .calendar-dateL {
-  color: #5f6471;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date p .calendar-dateL-remark {
-  color: #9ea7b4;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date:hover {
-  background-color: #14783c;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date:hover .calendar-dateL {
-  color: white;
-}
-
-.calendar-monthBox .calendar-dateBox .calendar-dateBox-row .calendar-date:hover .calendar-dateL-remark {
-  color: white;
-}
-
-.showMainBody table {
-  border-collapse: collapse;
-  width: 100%;
-  background-color: #fff;
-  font-size: 14px;
-  margin-bottom: 45px;
-  line-height: 1.5em;
-}
-
-.showMainBody table tr {
-  display: table-row;
-  vertical-align: inherit;
-  border-color: inherit;
-}
-
-.showMainBody table tr th, .showMainBody table tr td {
-  text-align: left;
-  white-space: nowrap;
-  color: #909399;
-  font-weight: 400;
-  border-bottom: 1px solid #dcdfe6;
-  padding: 15px;
-  max-width: 250px;
-}
-
-.fullScreen-mark {
-  transition: all 0.3s;
-}
-
-.fullScreen-open {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  background-color: rgba(100, 100, 100, 0.3);
-  z-index: 9;
-  left: 0;
-  top: 0;
-}
-
-.fullScreen-open .fullScreen-Content {
-  position: absolute;
-  border: white 1px solid;
-  padding: 20px;
-}
-
 .z-btn-1 {
   --hue: 190;
   position: relative;
@@ -441,8 +238,8 @@ hr {
   bottom: -2em;
   transition: ease-in-out 0.5s;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%);
-  background-size: 13% 17%, 11% 13%, 16% 10%, 11% 19%, 18% 11%, 12% 10%, 18% 14%, 12% 14%, 19% 18%, 16% 15%, 16% 10%, 15% 17%, 16% 10%, 17% 15%, 17% 13%, 17% 19%;
+  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%);
+  background-size: 16% 20%, 20% 17%, 14% 12%, 15% 19%, 11% 20%, 17% 19%, 12% 15%, 10% 15%, 19% 12%, 10% 12%, 17% 16%, 16% 13%, 16% 16%, 18% 17%, 12% 18%, 10% 17%;
   background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%, 83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
   animation: bubbles ease-in-out 0.75s forwards;
 }
