--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,3 +25,4 @@ h1,h2,h3,h4,h5 {
 @import './markdownTable.scss';
 @import './fullScreen.scss';
 @import './zButton.scss';
+@import './zPiechart.scss';
