--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -441,8 +441,8 @@ hr {
   bottom: -2em;
   transition: ease-in-out 0.5s;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%);
-  background-size: 19% 19%, 15% 13%, 13% 18%, 17% 10%, 15% 20%, 17% 19%, 17% 17%, 20% 17%, 20% 10%, 14% 17%, 13% 14%, 12% 20%, 11% 13%, 15% 10%, 11% 20%, 10% 11%;
+  background-image: radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%);
+  background-size: 18% 16%, 13% 20%, 11% 13%, 10% 20%, 19% 11%, 13% 17%, 17% 20%, 10% 10%, 19% 19%, 17% 16%, 10% 14%, 16% 13%, 20% 14%, 10% 15%, 13% 18%, 10% 19%;
   background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%, 83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
   animation: bubbles ease-in-out 0.75s forwards;
 }
@@ -478,12 +478,11 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
-  --gauge-color: #4ec0e9;
-  --gauge-color-lighter: #a9e0f4;
+  --Zcolor1: #4ec0e9;
+  --Zcolor2: #a9e0f4;
   --percentage: calc(var(--gauge-value) / var(--gauge-max-value) * 100%);
-  transition: all 5s;
-  background: conic-gradient(var(--gauge-color) 0 var(--percentage), var(--gauge-color-lighter) 0 100%);
-  counter-reset: value var(--gauge-value);
+  background: conic-gradient(var(--Zcolor1) var(--percentage), var(--Zcolor2) 0);
+  counter-reset: value calc(var(--gauge-value));
 }
 
 .z-piechart::before {
@@ -492,9 +491,33 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 90%;
+  width: 80%;
+  height: 80%;
   color: black;
   background: white;
   border-radius: inherit;
+}
+
+.z-piechart-firstAnimate {
+  --Zpos: 0%;
+  animation: render 2s ease-in 1 forwards;
+  background: conic-gradient(var(--Zcolor1) var(--Zpos), var(--Zcolor2) 0);
+}
+
+.z-piechart-animated {
+  --Zpos: 0%;
+  background: conic-gradient(var(--Zcolor1) var(--Zpos), var(--Zcolor2) 0);
+  animation: render2 .5s ease-in 1 forwards;
+}
+
+@keyframes render {
+  to {
+    --Zpos: var(--percentage);
+  }
+}
+
+@keyframes render2 {
+  to {
+    --Zpos: var(--percentage);
+  }
 }
