--- a/src/styles/zPiechart.css
+++ b/src/styles/zPiechart.css
@@ -6,10 +6,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  --Zcolor1: #4ec0e9;
-  --Zcolor2: #a9e0f4;
+  --gauge-color: #4ec0e9;
+  --gauge-color-lighter: #a9e0f4;
   --percentage: calc(var(--gauge-value) / var(--gauge-max-value) * 100%);
-  background: conic-gradient(var(--Zcolor1) var(--percentage), var(--Zcolor2) 0);
+  transition: all 5s;
+  background: conic-gradient(var(--gauge-color) 0 var(--percentage), var(--gauge-color-lighter) 0 100%);
   counter-reset: value var(--gauge-value);
 }
 
@@ -19,33 +20,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 90%;
   color: black;
   background: white;
   border-radius: inherit;
-}
-
-.z-piechart-firstAnimate {
-  --Zpos: 0%;
-  animation: render 2s ease-in 1 forwards;
-  background: conic-gradient(var(--Zcolor1) var(--Zpos), var(--Zcolor2) 0);
-}
-
-.z-piechart-animated {
-  --Zpos: 0%;
-  background: conic-gradient(var(--Zcolor1) var(--Zpos), var(--Zcolor2) 0);
-  animation: render2 .5s ease-in 1 forwards;
-}
-
-@keyframes render {
-  to {
-    --Zpos: var(--percentage);
-  }
-}
-
-@keyframes render2 {
-  to {
-    --Zpos: var(--percentage);
-  }
 }
