--- a/examples/styles/index.css
+++ b/examples/styles/index.css
@@ -441,8 +441,8 @@ hr {
   bottom: -2em;
   transition: ease-in-out 0.5s;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%);
-  background-size: 18% 16%, 13% 20%, 11% 13%, 10% 20%, 19% 11%, 13% 17%, 17% 20%, 10% 10%, 19% 19%, 17% 16%, 10% 14%, 16% 13%, 20% 14%, 10% 15%, 13% 18%, 10% 19%;
+  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%);
+  background-size: 10% 10%, 13% 13%, 11% 20%, 10% 15%, 10% 17%, 20% 12%, 13% 18%, 15% 10%, 19% 18%, 13% 19%, 15% 19%, 16% 13%, 20% 12%, 11% 19%, 17% 11%, 17% 14%;
   background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%, 83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
   animation: bubbles ease-in-out 0.75s forwards;
 }
@@ -482,7 +482,7 @@ hr {
   --Zcolor2: #a9e0f4;
   --percentage: calc(var(--gauge-value) / var(--gauge-max-value) * 100%);
   background: conic-gradient(var(--Zcolor1) var(--percentage), var(--Zcolor2) 0);
-  counter-reset: value calc(var(--gauge-value));
+  counter-reset: value var(--gauge-value);
 }
 
 .z-piechart::before {
@@ -519,5 +519,38 @@ hr {
 @keyframes render2 {
   to {
     --Zpos: var(--percentage);
+  }
+}
+
+.z-ring {
+  position: relative;
+  min-width: 20px;
+  min-height: 20px;
+  background: inherit;
+  border-radius: 50%;
+  animation: spin 2s linear infinite;
+}
+
+.z-ring::before, .z-ring::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  border-radius: inherit;
+  box-shadow: inherit;
+}
+
+.z-ring::before {
+  filter: blur(3px);
+}
+
+.z-ring::after {
+  filter: blur(6px);
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
   }
 }
