--- a/examples/styles/index.css
+++ b/examples/styles/index.css
@@ -441,8 +441,8 @@ hr {
   bottom: -2em;
   transition: ease-in-out 0.5s;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%);
-  background-size: 10% 10%, 13% 13%, 11% 20%, 10% 15%, 10% 17%, 20% 12%, 13% 18%, 15% 10%, 19% 18%, 13% 19%, 15% 19%, 16% 13%, 20% 12%, 11% 19%, 17% 11%, 17% 14%;
+  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%);
+  background-size: 15% 12%, 10% 18%, 11% 13%, 12% 14%, 15% 10%, 18% 14%, 12% 18%, 20% 19%, 19% 11%, 13% 15%, 11% 13%, 16% 10%, 15% 11%, 11% 18%, 14% 11%, 20% 20%;
   background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%, 83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
   animation: bubbles ease-in-out 0.75s forwards;
 }
@@ -553,4 +553,34 @@ hr {
   to {
     transform: rotate(1turn);
   }
+}
+
+.tabsBox {
+  height: 400px;
+  width: 100%;
+}
+
+.z-tabs {
+  width: 100%;
+  height: 100%;
+}
+
+.z-tabs .z-tabs-title {
+  height: 48px;
+  line-height: 48px;
+  border-bottom: 2px solid #888888;
+  width: 100%;
+}
+
+.z-tabs .z-tabs-title-name {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 0 20px;
+  padding: 10px 12px;
+  cursor: pointer;
+}
+
+.z-tabs .z-tabs-title-name.active {
+  color: red;
 }
