--- a/examples/styles/index.css
+++ b/examples/styles/index.css
@@ -441,8 +441,8 @@ hr {
   bottom: -2em;
   transition: ease-in-out 0.5s;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%);
-  background-size: 15% 12%, 10% 18%, 11% 13%, 12% 14%, 15% 10%, 18% 14%, 12% 18%, 20% 19%, 19% 11%, 13% 15%, 11% 13%, 16% 10%, 15% 11%, 11% 18%, 14% 11%, 20% 20%;
+  background-image: radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%);
+  background-size: 19% 20%, 15% 15%, 17% 19%, 14% 12%, 20% 16%, 17% 15%, 12% 17%, 18% 15%, 20% 14%, 20% 13%, 17% 13%, 12% 19%, 20% 11%, 18% 18%, 20% 10%, 11% 20%;
   background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%, 83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
   animation: bubbles ease-in-out 0.75s forwards;
 }
@@ -556,13 +556,15 @@ hr {
 }
 
 .tabsBox {
-  height: 400px;
+  height: 200px;
   width: 100%;
 }
 
 .z-tabs {
   width: 100%;
   height: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 
 .z-tabs .z-tabs-title {
@@ -570,17 +572,55 @@ hr {
   line-height: 48px;
   border-bottom: 2px solid #888888;
   width: 100%;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+}
+
+.z-tabs .z-tabs-title .el-icon-arrow-right {
+  position: absolute;
+  right: -10px;
+  top: 24px;
+}
+
+.z-tabs .z-tabs-title .z-tabs-title-box {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: 100%;
+}
+
+.z-tabs .z-tabs-title .z-tabs-title-bottom {
+  width: 50px;
+  height: 3px;
+  background-color: #409eff;
+  display: block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  transition: all .2s;
 }
 
 .z-tabs .z-tabs-title-name {
-  display: inline-block;
+  display: block;
   font-size: 14px;
   font-weight: 600;
-  margin: 0 20px;
-  padding: 10px 12px;
+  height: 100%;
+  margin-left: 30px;
   cursor: pointer;
+  white-space: nowrap;
+  line-height: 48px;
 }
 
 .z-tabs .z-tabs-title-name.active {
-  color: red;
+  color: #409eff;
+}
+
+.z-tabs .z-tabs-title-name:first-of-type {
+  margin-left: 0;
+}
+
+.z-tabs .z-tabs-content {
+  margin-top: 12px;
 }
