--- a/examples/styles/zTabs.css
+++ b/examples/styles/zTabs.css
@@ -1,11 +1,13 @@
 .tabsBox {
-  height: 400px;
+  height: 200px;
   width: 100%;
 }
 
 .z-tabs {
   width: 100%;
   height: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 
 .z-tabs .z-tabs-title {
@@ -13,17 +15,55 @@
   line-height: 48px;
   border-bottom: 2px solid #888888;
   width: 100%;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+}
+
+.z-tabs .z-tabs-title .el-icon-arrow-right {
+  position: absolute;
+  right: -10px;
+  top: 24px;
+}
+
+.z-tabs .z-tabs-title .z-tabs-title-box {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: 100%;
+}
+
+.z-tabs .z-tabs-title .z-tabs-title-bottom {
+  width: 50px;
+  height: 3px;
+  background-color: #409eff;
+  display: block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  transition: all .2s;
 }
 
 .z-tabs .z-tabs-title-name {
-  display: inline-block;
+  display: block;
   font-size: 14px;
   font-weight: 600;
-  margin: 0 20px;
-  padding: 10px 12px;
+  height: 100%;
+  margin-left: 30px;
   cursor: pointer;
+  white-space: nowrap;
+  line-height: 48px;
 }
 
 .z-tabs .z-tabs-title-name.active {
-  color: red;
+  color: #409eff;
+}
+
+.z-tabs .z-tabs-title-name:first-of-type {
+  margin-left: 0;
+}
+
+.z-tabs .z-tabs-content {
+  margin-top: 12px;
 }
