--- a/examples/styles/zTabs.css
+++ b/examples/styles/zTabs.css
@@ -26,6 +26,12 @@
   top: 24px;
 }
 
+.z-tabs .z-tabs-title .el-icon-arrow-left {
+  position: absolute;
+  left: -10px;
+  top: 24px;
+}
+
 .z-tabs .z-tabs-title .z-tabs-title-box {
   position: relative;
   display: flex;
