tab标签已经支持分页，且优化了动画

--- a/examples/styles/index.css
+++ b/examples/styles/index.css
@@ -441,8 +441,8 @@ hr {
   bottom: -2em;
   transition: ease-in-out 0.5s;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%);
-  background-size: 19% 20%, 15% 15%, 17% 19%, 14% 12%, 20% 16%, 17% 15%, 12% 17%, 18% 15%, 20% 14%, 20% 13%, 17% 13%, 12% 19%, 20% 11%, 18% 18%, 20% 10%, 11% 20%;
+  background-image: radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%), radial-gradient(circle, var(--btn-bg-color) 20%, transparent 20%), radial-gradient(circle, transparent 20%, var(--btn-bg-color) 20%, transparent 30%);
+  background-size: 17% 13%, 15% 16%, 14% 12%, 11% 14%, 20% 14%, 19% 20%, 19% 18%, 11% 16%, 19% 18%, 10% 20%, 15% 14%, 13% 15%, 18% 19%, 16% 16%, 11% 14%, 19% 20%;
   background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%, 83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
   animation: bubbles ease-in-out 0.75s forwards;
 }
@@ -558,6 +558,7 @@ hr {
 .tabsBox {
   height: 200px;
   width: 100%;
+  overflow: hidden;
 }
 
 .z-tabs {
@@ -565,6 +566,41 @@ hr {
   height: 100%;
   padding: 0 20px;
   box-sizing: border-box;
+  position: relative;
+}
+
+.z-tabs .el-icon-arrow-right {
+  position: absolute;
+  right: 0;
+  top: 20px;
+  font-size: 10px;
+  cursor: pointer;
+  color: #999999;
+}
+
+.z-tabs .el-icon-arrow-right::before {
+  content: '>';
+}
+
+.z-tabs .el-icon-arrow-right.show {
+  color: black;
+}
+
+.z-tabs .el-icon-arrow-left {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  font-size: 10px;
+  cursor: pointer;
+  display: none;
+}
+
+.z-tabs .el-icon-arrow-left::before {
+  content: '<';
+}
+
+.z-tabs .el-icon-arrow-left.show {
+  display: block;
 }
 
 .z-tabs .z-tabs-title {
@@ -577,18 +613,13 @@ hr {
   position: relative;
 }
 
-.z-tabs .z-tabs-title .el-icon-arrow-right {
-  position: absolute;
-  right: -10px;
-  top: 24px;
-}
-
 .z-tabs .z-tabs-title .z-tabs-title-box {
   position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   height: 100%;
+  transition: all .5s;
 }
 
 .z-tabs .z-tabs-title .z-tabs-title-bottom {
@@ -599,7 +630,7 @@ hr {
   position: absolute;
   bottom: -2px;
   left: 0;
-  transition: all .2s;
+  transition: all .5s;
 }
 
 .z-tabs .z-tabs-title-name {
